SlalomTracker.WebApi/skiwebapi-preview.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: skiwebapi-preview
  labels:
    app: skiwebapi-preview
spec:
  replicas: 2
  selector:
    matchLabels:
      app: skiwebapi-preview
  template:
    metadata:
      labels:
        app: skiwebapi-preview
    spec:
      containers:
      - name: skiwebapi-preview
        image: wthacr.azurecr.io/skiwebapi:v2.5.8.1
        imagePullPolicy: Always
        ports:
        - containerPort: 8080
---
apiVersion: v1
kind: Service
metadata:
  name: skiwebapi-service-preview
  labels:
    app: skiwebapi-preview
spec:
  ports:
  - port: 8080
  selector:
    app: skiwebapi-preview
  type: ClusterIP
---
apiVersion: extensions/v1beta1
kind: Ingress
metadata:
  name: skiwebapi-ingress-preview
  annotations:
    #nginx.ingress.kubernetes.io/enable-cors: "true"
    # Required for debugging.
    nginx.ingress.kubernetes.io/cors-allow-origin: "http://localhost:3000"
spec:
  tls:
  - hosts:
    - jasondel.com
    secretName: jasondel-com-tls
  rules:
    - host: skipreview.jasondel.com
      http:
        paths:
          - backend:
              serviceName: skiwebapi-service-preview
              servicePort: 8080
            path: /api
