SlalomTracker.WebApi/skiwebapi.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: skiwebapi-deployment
  labels:
    app: skiwebapi
spec:
  replicas: 2
  selector:
    matchLabels:
      app: skiwebapi
  template:
    metadata:
      labels:
        app: skiwebapi
    spec:
      containers:
      - name: skiwebapi
        image: wthacr.azurecr.io/skiwebapi:v2.1.2
        ports:
        - containerPort: 8080
---
apiVersion: v1
kind: Service
metadata:
  name: skiwebapi-service
  labels:
    app: skiwebapi
spec:
  ports:
  - port: 8080
  selector:
    app: skiwebapi
  type: ClusterIP
---
apiVersion: extensions/v1beta1
kind: Ingress
metadata:
  name: skiwebapi-ingress
spec:
  tls:
  - hosts:
    - jasondel.com
    secretName: jasondel-com-tls
  rules:
    - host: ski.jasondel.com
      http:
        paths:
          - backend:
              serviceName: skiwebapi-service
              servicePort: 8080
            path: /api
